--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 <body class="mainContainer">
-    <h1>Toto je web Koček</h1>
+    <h1>Toto je web Koček lol</h1>
     <!-- A: tady seznam lidi -->
     <!-- B: tady seznam technologii -->
 </body>
