--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body class="mainContainer">
     <h1>Toto je web Koček lol</h1>
+    <ul>
+        <li>Hanka</li>
+        <li>Majda</li>
+        <li>Lívia</li>
+        <li>Natka</li>
+    </ul>
+
     <!-- A: tady seznam lidi -->
     <!-- B: tady seznam technologii -->
 </body>
