--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
         <li>Natka</li>
     </ul>
 
+    <ul>
+        <li>html</li>
+        <li>css</li>
+        <li>javascript</li>
+
+    </ul>
     <!-- A: tady seznam lidi -->
     <!-- B: tady seznam technologii -->
 </body>
