--- a/index.html
+++ b/index.html
@@ -11,19 +11,18 @@
 </head>
 <body class="mainContainer">
     <h1>Toto je web Koček lol</h1>
-    <ul>
-        <li>Hanka</li>
-        <li>Majda</li>
-        <li>Lívia</li>
-        <li>Natka</li>
-    </ul>
+    <!--
+        Hanka
+        Majda
+        Lívia
+        Natka
+    -->
+    <!--
+        html
+        css
+        javascript
+    -->
 
-    <ul>
-        <li>html</li>
-        <li>css</li>
-        <li>javascript</li>
-
-    </ul>
     
 </body>
 </html>
