--- a/index.html
+++ b/index.html
@@ -10,20 +10,11 @@
     <title>Document</title>
 </head>
 <body class="mainContainer">
+    <div>
     <h1>Toto je web Koček lol</h1>
-    <ul>
-        <li>Hanka</li>
-        <li>Majda</li>
-        <li>Lívia</li>
-        <li>Natka</li>
-    </ul>
+    
+    </div>
 
-    <ul>
-        <li>html</li>
-        <li>css</li>
-        <li>javascript</li>
-
-    </ul>
     
 </body>
 </html>
