--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/shared.css" type="text/css" />
+    <link rel="stylesheet" href="tutorial_main.css" type="text/css" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
+    
+
 </head>
 <body>
+    <div>
+        <h1>Tutorialy</h1>
+    </div>
+<br>
+
+<div>
+    <img src="../../images/myti_nadobi.jpg">
+</div>
+<p>
+<h2> Tutorial na čisté nádobí:<br>
+    Nádobí jsi první opláchněte, poté vemte houbičku s pořádnou kapičkou mycího prostředku a můžete začít mydlit.
+    Když máte toto vše udělané, stačí nádobí osušit a uklidit do skříňky.
+    Pak si nadále můžete užívat čisté a lesklé nádobí.
+</h2>
+<br>
+
+<div>
+   <img src="../../images/domacnost_bez_prachu.jpg">
+</div>
+
+<h2> Tutorial na domácnost bez prachu:<br>
+    Prach je určitě odjakživa ten nejhorší záškodník, proto si na tento úklid udělejte více času, ale s výsledkem budete
+    určitě spokojeni. Na uklízení budete potřebovat mokrý hadřík, houbičku nebo cokoliv jiného a můžete hned začít.
+    Po nějaké době jsi hadřík vyperte a když to budete mít hotové, tak se můžete těšit na další uklízení.
+</h2>
+<br>
+
+<div>
+    <img src="../../images/zachod.jpg">
+</div>
+
+<h2> Tutorial na voňavou toaletu:<br>
+    Jak všichni víme, tak nikdo nemá rád zapáchající toalety, proto by jsme je měli, alespoň po sobě vyčistit.
+    Prostě jsi jednodnuše vezměte štětku na toaletu, která je vždy vedle toalety. WC pak jednoduše vyčistíte
+    můžete použít i voňavý sprej. Pak už na vás nikdo nemůže nadávat.
+</p>
     
 </body>
 </html>
