--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/shared.css" type="text/css" />
+    <link rel="stylesheet" href="onas-main.css" type="text/css" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
 </head>
+
 <body>
-    
+    <div>
+        <h1>O Nás</h1>
+
+        <h2>zaměstnanci</h2>
+        <div class="mainContainer">
+            <div class="paragraphContainer">
+                <p>Jana-Je mi 48 let a bydlim v Mladé Boleslavi.
+                    Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
+                    Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
+                    Samozřejmě jsem krásná paní a nevdaná.
+                </p>
+            </div>
+            <div class="paragraphContainer">
+                <p>Alžběta-všichni mi ale říkají Bětuška.Je mi 32 let. Jsem z Chomutova.
+                    
+                </p>
+            </div>
+            <div class="paragraphContainer">
+                <p>Jana-Je mi 48 let a bydlim v Mladé Boleslavi.
+                    Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
+                    Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
+                    Samozřejmě jsem krásná paní a nevdaná.
+                </p>
+            </div>
+        </div>
+
+
+    </div>
+
+
 </body>
+
 </html>
