--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -25,7 +25,10 @@
                 </p>
             </div>
             <div class="paragraphContainer">
-                <p>Alžběta-všichni mi ale říkají Bětuška.Je mi 32 let. Jsem z Chomutova.
+                <p>Alžběta-všichni mi ale říkají Bětuška.Je mi 32 let. 
+                    Jsem z Chomutova. Umím umýt nádobí a někdy dokážu i navařit. 
+                    Nejlépe mi ale jde zametat. Pokud ale potřebujete pomoc s něčím, 
+                    co neumím musíte mi to nejdřív ukázat jak se to dělá
                     
                 </p>
             </div>
