--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -33,10 +33,11 @@
                 </p>
             </div>
             <div class="paragraphContainer">
-                <p>Jana-Je mi 48 let a bydlim v Mladé Boleslavi.
-                    Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
-                    Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
-                    Samozřejmě jsem krásná paní a nevdaná.
+                <p>Aneta- Dobrý den, jmenuji se Mařena, ale klidně mi radši říkejte Any.
+                   Je mi 42 let a jsem velice zkušená uklízečka.
+                   Ráda vám pomůžu ulkidit a klidně vám dokážu i 
+                   poradit jak se co uklízí nebo vaří. 
+                   Jsem velice dobrá v učení někoho uklízet protože mě to baví.
                 </p>
             </div>
         </div>
