--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -21,7 +21,7 @@
     <img src="../../images/myti_nadobi.jpg">
 </div>
 <p>
-<h2> Tutorial na čisté nádobí:<br>
+<h2> Tutorial na blyštivé nádobí:<br>
     Nádobí jsi první opláchněte, poté vemte houbičku s pořádnou kapičkou mycího prostředku a můžete začít mydlit.
     Když máte toto vše udělané, stačí nádobí osušit a uklidit do skříňky.
     Pak si nadále můžete užívat čisté a lesklé nádobí.
@@ -29,7 +29,7 @@
 <br>
 
 <div>
-   <img src="../../images/domacnost_bez_prachu.jpg">
+   <img src="../../images/domacnost_bez_prachu1.jpg">
 </div>
 
 <h2> Tutorial na domácnost bez prachu:<br>
@@ -47,6 +47,14 @@
     Jak všichni víme, tak nikdo nemá rád zapáchající toalety, proto by jsme je měli, alespoň po sobě vyčistit.
     Prostě jsi jednodnuše vezměte štětku na toaletu, která je vždy vedle toalety. WC pak jednoduše vyčistíte
     můžete použít i voňavý sprej. Pak už na vás nikdo nemůže nadávat.
+</h2>
+<br>
+<div>
+    <img src="../../images/tutorial_pracka1.jpg">
+</div>
+
+<h2>Tutorial na čisté prádlo:<br>
+    
 </p>
     
 </body>
