--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
     <title>Document</title>
 </head>
-<<<<<<< HEAD
-=======
-<body class="mainContainer">
-    <div>
-    <h1>Toto je web Koček lol</h1>
+
+<body>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!--
         Hanka
         Majda
@@ -27,14 +28,17 @@
         css
         javascript
     -->
->>>>>>> 3c65e21e9b148e634f3ed6e02cae9b81cc2ecbc7
-
-<body>
     <div class="con">
 
         <div class="header">
 
             <h1>KOČKY UKLÍZEČKY</h1>
+
+            <img id="logoimg" href="images/Untitled-Artwork.pdf" src="images/Untitled-Artwork.png">
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
 
         </div>
 
@@ -48,7 +52,31 @@
 
         <div class="hlavni">
 
-            <p> lala </p>
+            <div class="column">
+                <div>
+                    <h2> SOUTĚŽ 
+
+                        <link rel="preconnect" href="https://fonts.googleapis.com">
+                        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+                        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+
+                    </h2>
+                </div>
+            <p> Dobrý den, cítíte se jako Monica z Friends? nebo vás už jen nebaví žít v bordelu? 
+                Přesně proto Vám přinášíme soutěž o NAŠE čistící prostředky, KOČKY UKLÍZEČKY.
+                Jak se zůčastnit? Je to jednoduché...
+            </p>
+            <ul id="ulsoutez">
+                <li>zaregistrujte se k odběru našeho letáku</li>
+                <li>pošlete nám na náš email - kockyuklizecky@seznam.com - důvod, proč si naše pordukty zasloužíte</li>
+                <li>doufejte v zázrak</li>
+            </ul>
+            </div>
+
+            <div class="column">
+
+
+            </div>
 
         </div>
 
