--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -18,20 +18,53 @@
         <h2>zaměstnanci</h2>
         <div class="mainContainer">
             <div class="paragraphContainer">
-                <p>Jana-Je mi 48 let a bydlim v Mladé Boleslavi.
-                    Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
-                    Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
-                    Samozřejmě jsem krásná paní a nevdaná.
+                <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi radši říkejte Any.
+                   Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna
+                   Ráda vám pomůžu ulkidit a klidně vám dokážu i 
+                   poradit jak se co uklízí nebo vaří. Jsem velice dobrá 
+                   v učení někoho uklízet protože mě to baví.
                 </p>
             </div>
             <div class="paragraphContainer">
-                <p>Alžběta-všichni mi ale říkají Bětuška.Je mi 32 let.
+                <p><b>Alžběta</b>-všichni mi ale říkají Bětuška.Je mi 32 let.
                     Jsem z Chomutova. Umím umýt nádobí a někdy dokážu i navařit.
                     Nejlépe mi ale jde zametat. Pokud ale potřebujete pomoc s něčím, 
                     co neumím musíte mi to nejdřív ukázat jak se to dělá
                     
                 </p>
             </div>
+           
+             <div class="paragraphContainer">
+                    <p><b>Jana</b>-Je mi 48 let a bydlim v Mladé Boleslavi.
+                    Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
+                    Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
+                    Samozřejmě jsem krásná paní a nevdaná.
+
+                </p>
+            </div>
+        </div>
+
+
+
+        <h2 class="font-i">historie</h2>
+        <div class="mainContainer">
+            <div class="mainContainer">
+                <i>
+                    <p>Jsme společnost, která již funguje velice dlouho. Máme hodně zkušeností a velmi věrné zákazníky.
+                    Naše firma byla založena v roce 1986 skupinkou mladých žen, které nemohly vystát nepořádek. 
+                    Ze začátku jsme měli mnoho problému, ale povedlo se nám je všechny překonat, a nyní jsem jedna z nejvíce 
+                    prosperujících společností v Čechách, na Slovensku a v Polsku.
+                    </p>
+                </i>
+            </div>
+            <h2 class="font-i">začatek služby</h2>
+            <div class="mainContainer">
+                <i>
+                    <p>V roce 1986 naše firma začala poskytovat služby. Bohužel jsme tehdy začínali jenom s uklízením veřejních míst.
+                        První rok byl velice složitý  
+
+                    </p>
+                </i>
             <div class="paragraphContainer">
                 <p>Aneta- Dobrý den, jmenuji se Mařena, ale klidně mi radši říkejte Any.
                    Je mi 42 let a jsem velice zkušená uklízečka.
@@ -41,7 +74,6 @@
                 </p>
             </div>
         </div>
-
 
     </div>
 
