--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </p>
             <ul id="ulsoutez">
                 <li>zaregistrujte se k odběru našeho letáku</li>
-                <li>pošlete nám na náš email - kockyuklizecky@seznam.com - důvod, proč si naše pordukty zasloužíte</li>
+                <li>pošlete nám na náš email - kockyuklizecky@seznam.com - důvod, proč si naše produkty zasloužíte</li>
                 <li>doufejte v zázrak</li>
             </ul>
             </div>
