--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -13,9 +13,22 @@
 </head>
 <body>
     <div>
-        <h1>Tutorialy</h1>
+        <h1 class="nadpis" >TUTORIÁLY</h1>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap" rel="stylesheet">
+
     </div>
-<br>
+    
+    <div class="menutut">
+
+        <a href="/index.html"> hlavní stránka </a>
+        <a href="/src/onas/index.html"> o nás </a>
+        <a href="/src/sluzby/index.html"> služby </a>
+        
+
+    </div>
 
 <div>
     <img class="tutorialyimg" src="../../images/myti_nadobi.jpg">
