--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -61,7 +61,10 @@
             <div class="mainContainer">
                 <i>
                     <p>V roce 1986 naše firma začala poskytovat služby. Bohužel jsme tehdy začínali jenom s uklízením veřejních míst.
-                        První rok byl velice složitý  
+                        První roky byly velice složité, protože jsme neměli moc zákazníků a veřejních míst moc nebylo.
+                        Ale postupně k nám přidávalo více a více zakazníků, které jsme začali školit v umění uklízení.
+                        V   
+
 
                     </p>
                 </i>
