--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -63,9 +63,7 @@
                     <p>V roce 1986 naše firma začala poskytovat služby. Bohužel jsme tehdy začínali jenom s uklízením veřejních míst.
                         První roky byly velice složité, protože jsme neměli moc zákazníků a veřejních míst moc nebylo.
                         Ale postupně k nám přidávalo více a více zakazníků, které jsme začali školit v umění uklízení.
-                        V   
-
-
+                        Naše první kancelář byla pro nás už malá tak jsme se rozhodli v roce 1982 otevřit větší kancelář.
                     </p>
                 </i>
             <div class="paragraphContainer">
