--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -15,13 +15,13 @@
     <div>
         <h1>O Nás</h1>
 
-        <h2>zaměstnanci</h2>
+        <h2>Zaměstnanci</h2>
         <div class="mainContainer">
             <div class="paragraphContainer">
                 <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi radši říkejte Any.
-                   Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna
-                   Ráda vám pomůžu ulkidit a klidně vám dokážu i 
-                   poradit jak se co uklízí nebo vaří. Jsem velice dobrá 
+                   Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna.
+                   Ráda vám váš dům uklidím a dokážu i 
+                   poradit jak jsi můžete poklidit nebo uvařit sami. Jsem velice dobrá 
                    v učení někoho uklízet protože mě to baví.
                 </p>
             </div>
@@ -66,14 +66,6 @@
                         Naše první kancelář byla pro nás už malá tak jsme se rozhodli v roce 1982 otevřit větší kancelář.
                     </p>
                 </i>
-            <div class="paragraphContainer">
-                <p>Aneta- Dobrý den, jmenuji se Mařena, ale klidně mi radši říkejte Any.
-                   Je mi 42 let a jsem velice zkušená uklízečka.
-                   Ráda vám pomůžu ulkidit a klidně vám dokážu i 
-                   poradit jak se co uklízí nebo vaří. 
-                   Jsem velice dobrá v učení někoho uklízet protože mě to baví.
-                </p>
-            </div>
         </div>
 
     </div>
