--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Dokument</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
 
     </div>
 
-    
+
     <div>
         <h1 class="nadpis" >TUTORIÁLY</h1>
 
