--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -21,7 +21,7 @@
                 <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi radši říkejte Any.
                    Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna.
                    Ráda vám váš dům uklidím a dokážu i 
-                   poradit jak jsi můžete poklidit nebo uvařit sami. Jsem v tom velice dobrá
+                   poradit jak jsi můžete poklidit nebo uvařit sami. Jsem v tom velice dobrá.
                 </p>
             </div>
             <div class="paragraphContainer">
