--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 
 <body>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
-    <!--
+       <!--
         Hanka
         Majda
         Lívia
@@ -36,6 +33,10 @@
             <a href="./src/onas/index.html"> o nás </a>
             <a href="./src/sluzby/index.html"> služby </a>
             <a href="./src/tutorialy/index.html"> tutoriály </a>
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
 
         </div>
 
@@ -91,16 +92,23 @@
 
             </div>
 
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
         </div>
 
         <div class="footer">
             
             <p>
-                kontakty
-                    tel: +420 876 457 987
-                    email: kockyuklizecky@seznam.cz
+                   <div> tel: +420 876 457 987 </div>
+                  <div>  email: kockyuklizecky@seznam.cz </div>
                 
             </p>
+
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
         </div>
 
