--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -15,6 +15,12 @@
 
 <body>
 
+  <div class="tutcelek">  
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
     <div class="menutut">
 
         <a href="/index.html"> hlavní stránka </a>
@@ -50,6 +56,10 @@
         </p>
         </div>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
     </div>
 
     <div class="noname">
@@ -66,6 +76,10 @@
             Po nějaké době jsi hadřík vyperte a když to budete mít hotové, tak se můžete těšit na další uklízení.<br>
         </p>
         </div>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
     </div>
 
@@ -84,6 +98,10 @@
             </p>
         </div>
 
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
+
     </div>
 
     <div class="noname">
@@ -98,6 +116,10 @@
             navzájem obarvit. <br>Po vyprání stačí prádlo usušit a můžeme ho dál nosit.
         </p>
        </div>
+
+       <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
     </div>
 
@@ -115,8 +137,13 @@
             podlahou.
         </p>
         </div>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
     </div>
+    
+  </div> 
 
 </body>
 
