--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -152,6 +152,7 @@
     <p>
         <div> tel: +420 876 457 987 </div>
        <div>  email: kockyuklizecky@seznam.cz </div>
+       <div>  ig: kocky._.uklizecky </div>
      
     </p>
 
