--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <p>
                    <div> tel: +420 876 457 987 </div>
                   <div>  email: kockyuklizecky@seznam.cz </div>
-                
+                  <div>  ig: kocky._.uklizecky </div>                
             </p>
 
             <link rel="preconnect" href="https://fonts.googleapis.com">
