--- a/src/sluzby/index.html
+++ b/src/sluzby/index.html
@@ -4,8 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="css/shared.css" type="text/css" />
+    <link rel="stylesheet" href="sluzby_main.css" type="text/css" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
+ 
 </head>
 <body>
+<h1>NAŠE SLUŽBY</h1>
+
+
+<h1>V případě zájmu o úlid nám napište na email nebo tel-číslo.</h1>
+
+<div class="timetable">
+    <div>
+        <div class="casy"><h3>pondělí: 8:00 - 19:00</h3><h4>Podlahy, okna, záchody.</h4></div>
+        <div class="casy"><h3>úterý: 8:00 - 19:00</h3><h4>Koupelna, kuchyně, ložnice/pokoje.</h4></div>
+        <div class="casy"><h3>středa: 8:00 - 19:00</h3><h4>Utírání prachu, nádobí, zametání.</h4></div>
+        <div class="casy"><h3>čtvrtek: 10:00 - 17:00</h3><h4>Podlahy, okna, záchody.</h4></div>
+        <div class="casy"><h3>pátek:10:00 - 17:00</h3><h4>Koupelna, kuchyně, ložnice/pokoje.</h4></div>
+        <div class="casy"><h3>sobota: 10:00 - 17:00</h3><h4>Utírání prachu, nádobí.</h4></div>
+        <div class="casy"><h3>neděle: neuklízíme</h3><h4>-</h4></div>
+    </div>
+
+    <img class="obrazek" src="../../images/cat.jpg">
+</div>
+
+<div>
+
+    <div class="imgumisteni">
     
+    </div>
+</div>
+<h2>VOLNÉ TERMÍNY</h2>
+<h2>PONDĚLÍ:</h2>
+  <h3>Podlahy - volné</h3>
+   <h3>Okna - volné</h3>
+   <h3>Záchody - zabrané</h3>
+<h2>ÚTERÝ:</h2>
+   <h3>Koupelna - zabrané</h3>
+    <h3>Kuchyně - zabrané</h3>
+    <h3>Ložnice/pokoje - volné</h3>
+<h2>STŘEDA:</h2>
+   <h3>Utírání prachu - zabrané</h3>
+   <h3>Nádobí - volné</h3>
+   <h3>Zametání - zabrané</h3>
+<h2>ČTVRTEK:</h2>
+    <h3>Podlahy - zabrané</h3>
+    <h3>Okna - volné</h3>
+    <h3>Záchody - volné</h3>
+<h2>PÁTEK:</h2>
+    <h3>Koupelna - volné</h3>
+    <h3>Kuchyně - zabrané</h3>
+    <h3>Ložnice/pokoje - zabrané</h3>
+<h2>SOBOTA:</h2>
+    <h3>Utírání prachu - zabrané
+    <h3>Nádobí - zabrané</h3>
+    <h3>Zametání - volné</h3>
 </body>
 </html>
