liv skoro hotovo

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <div class="header">
 
-            <h1>KOČKY UKLÍZEČKY</h1>
+            <h1 id="velikostnadpis">KOČKY UKLÍZEČKY </h1>
 
             <img id="logoimg" href="images/Untitled-Artwork.pdf" src="images/Untitled-Artwork.png">
 
