liv konec asi ne ale co uz

--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -148,13 +148,16 @@
 
 </div>
 <div class="tutfooter">
-   
-    <p>
-        <div> tel: +420 876 457 987 </div>
-       <div>  email: kockyuklizecky@seznam.cz </div>
-       <div>  ig: kocky._.uklizecky </div>
-     
-    </p>
+            
+        <p>
+               <div> tel: +420 876 457 987 </div>
+              <div>  email: kockyuklizecky@seznam.cz </div>
+              <div>  ig: kocky._.uklizecky </div>                
+        </p>
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
 
 </div>
 
