--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -76,7 +76,7 @@
             výsledkem budete
             určitě spokojeni. <br> Na uklízení budete potřebovat mokrý hadřík, houbičku nebo cokoliv jiného a můžete
             hned začít. <br>
-            Po nějaké době jsi hadřík vyperte a když to budete mít hotové, tak se můžete těšit na další uklízení.<br>
+            Po nějaké době si hadřík vyperte a když to budete mít hotové, tak se můžete těšit na další úklid.<br>
         </p>
         </div>
 
@@ -95,8 +95,8 @@
             <p>
                 Jak všichni víme, tak nikdo nemá rád zapáchající toalety, proto by jsme je měli, alespoň po sobě
                 vyčistit.<br>
-                Prostě jsi jednodnuše vezměte štětku na toaletu, která je vždy vedle toalety. <br>WC pak jednoduše
-                vyčistíte
+                Prostě si jednodnuše vezměte štětku na toaletu, která je vždy vedle WC. <br>Toaletu pak jednoduše
+                vyčistíte,
                 můžete použít i voňavý sprej. Pak už na vás nikdo nemůže nadávat.<br>
             </p>
         </div>
@@ -115,7 +115,7 @@
 
         <p>
             Praní prádla je lehká věc, stačí špinavé prádlo dát do pračky, přidáme prací prášek a pak jenom čekáme
-            než pračka dopere. <br>Důležité ale je nemsmíchat si hodně odlišné barvy dohromady, protože by se pak mohlo
+            než pračka dopere. <br>Důležité ale je nemsmíchat si hodně odlišné barvy dohromady, protože by se pak prádlo mohlo
             navzájem obarvit. <br>Po vyprání stačí prádlo usušit a můžeme ho dál nosit.
         </p>
        </div>
@@ -135,7 +135,7 @@
 
         <p>
             Na tento typ úklidu budete potřebovat jenom mop a kýbl s vodou a čistícím prostředkem.<br>
-            Jednoduše si mop namočíte a pak tím mopem můžete začít vytírat podlahu.<br> Délkamúklidu záleží na velikosti
+            Jednoduše si mop namočíte a pak tím mopem můžete začít vytírat podlahu.<br> Délka úklidu záleží na velikosti
             vašeho domu, proto jsi najděte čas na tento typ úklidu. <br>Poté se můžete pyšnit krásnou a hlavně čistou
             podlahou.
         </p>
