--- a/src/sluzby/index.html
+++ b/src/sluzby/index.html
@@ -18,6 +18,7 @@
         
         <a href="/index.html"> hlavní stránka </a>
         <a href="/src/onas/index.html"> o nás </a>
+        <a href="/src/sluzby/index.html"> služby </a>
         <a href="/src/tutorialy/index.html">tutoriály</a>
 
     </div>
