--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
         <div class="menu">
 
+            <a href="/index.html"> hlavní stránka </a>
             <a href="./src/onas/index.html"> o nás </a>
             <a href="./src/sluzby/index.html"> služby </a>
             <a href="./src/tutorialy/index.html"> tutoriály </a>
