--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -51,8 +51,8 @@
                     <i>
                         <p>Jsme společnost, která již funguje velice dlouho. Máme hodně zkušeností a velmi věrné zákazníky.
                         Naše firma byla založena v roce 1986 skupinkou mladých žen, které nemohly vystát nepořádek. 
-                        Ze začátku jsme měli mnoho problému, ale povedlo se nám je všechny překonat, a nyní jsem jedna z nejvíce 
-                        prosperujících společností v Čechách, na Slovensku a v Polsku.
+                        Ze začátku jsme měli mnoho problému, ale povedlo se nám je všechny překonat, a nyní jsme jedna z nejvíce 
+                        prosperujících společností v České Republice, na Slovensku a v Polsku.
                         </p>
                     </i>
                 </div>
@@ -71,10 +71,10 @@
                                     Bohužel jsme tehdy začínali jenom s uklízením veřejních míst.
                                     První roky byly velice složité, protože jsme neměli moc
                                     zákazníků a veřejních míst moc nebylo.
-                                    Ale postupně k nám přidávalo více a více zakazníků,
+                                    Ale postupně k nám přicházelo více a více zakazníků,
                                     které jsme začali školit v umění uklízení.
-                                    Naše první kancelář byla pro nás už malá tak jsme se rozhodli
-                                    v roce 1982 otevřit větší kancelář.
+                                    Naše první kancelář byla pro nás už malá, proto jsme se v roce 1982 rozhodli
+                                    otevřít větší kancelář.
                                 </p>
                             </i>
                         </div>
@@ -89,23 +89,23 @@
                 <h2>ZAMĚSTNANCI</h2>
                 <div class="mainContainer">
                     <div class="paragraphContainer">
-                        <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi radši říkejte Any.
+                        <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi říkejte Any.
                         Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna.
                         Ráda vám váš dům uklidím a dokážu i 
                         poradit jak jsi můžete poklidit nebo uvařit sami. Jsem v tom velice dobrá.
                         </p>
                     </div>
                     <div class="paragraphContainer">
-                        <p><b>Alžběta</b>-všichni mi ale říkají Bětuška.Je mi 32 let.
+                        <p><b>Alžběta</b>-Všichni mi ale říkají Bětuška.Je mi 32 let.
                             Jsem z Chomutova. Umím umýt nádobí a někdy dokážu i navařit.
-                            Nejlépe mi ale jde zametat. Pokud ale potřebujete pomoc s něčím, 
-                            co neumím musíte mi to nejdřív ukázat jak se to dělá
+                            Nejlépe mi ale jde zametat. Pokud potřebujete pomoc s něčím, 
+                            co neumím musíte mě to nejdříve naučit.
                             
                         </p>
                     </div>
                 
                     <div class="paragraphContainer">
-                            <p><b>Jana</b>-Je mi 48 let a bydlim v Mladé Boleslavi.
+                            <p><b>Jana</b>-Je mi 48 let a bydlím v Mladé Boleslavi.
                             Ráda uklízím a proto zde pracuji. Umím ze vším pomoci.
                             Dokážu vařit, zametat, umývat okna, podlahu a vysávat.
                             Samozřejmě jsem krásná paní a nevdaná.
