--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -57,6 +57,7 @@
             mydlit.<br>
             Když máte toto vše udělané, stačí nádobí osušit a uklidit do skříňky.<br>
             Pak si nadále můžete užívat čisté a lesklé nádobí.<br>
+            <a href="https://www.youtube.com/watch?v=Xk3YqQ_tF9o"> klikněte sem pro video </a>
         </p>
         </div>
 
@@ -78,6 +79,7 @@
             určitě spokojeni. <br> Na uklízení budete potřebovat mokrý hadřík, houbičku nebo cokoliv jiného a můžete
             hned začít. <br>
             Po nějaké době si hadřík vyperte a když to budete mít hotové, tak se můžete těšit na další úklid.<br>
+            <a href="https://www.youtube.com/watch?v=Fn__VTgsWWc"> klikněte sem pro video </a>
         </p>
         </div>
 
@@ -99,6 +101,7 @@
                 Prostě si jednodnuše vezměte štětku na toaletu, která je vždy vedle WC. <br>Toaletu pak jednoduše
                 vyčistíte,
                 můžete použít i voňavý sprej. Pak už na vás nikdo nemůže nadávat.<br>
+                <a href="https://www.youtube.com/watch?v=nuEkZP6Ae0s"> klikněte sem pro video </a>
             </p>
         </div>
 
@@ -116,8 +119,9 @@
 
         <p>
             Praní prádla je lehká věc, stačí špinavé prádlo dát do pračky, přidáme prací prášek a pak jenom čekáme
-            než pračka dopere. <br>Důležité ale je nemsmíchat si hodně odlišné barvy dohromady, protože by se pak prádlo mohlo
-            navzájem obarvit. <br>Po vyprání stačí prádlo usušit a můžeme ho dál nosit.
+            než pračka dopere. <br>Důležité ale je nesmíchat si hodně odlišné barvy dohromady, protože by se pak prádlo mohlo
+            navzájem obarvit. <br>Po vyprání stačí prádlo usušit a můžeme ho dál nosit. <br>
+            <a href="https://www.youtube.com/watch?v=hxppeYSswbU"> klikněte sem pro video </a>
         </p>
        </div>
 
@@ -137,8 +141,9 @@
         <p>
             Na tento typ úklidu budete potřebovat jenom mop a kýbl s vodou a čistícím prostředkem.<br>
             Jednoduše si mop namočíte a pak tím mopem můžete začít vytírat podlahu.<br> Délka úklidu záleží na velikosti
-            vašeho domu, proto jsi najděte čas na tento typ úklidu. <br>Poté se můžete pyšnit krásnou a hlavně čistou
-            podlahou.
+            vašeho domu, proto si najděte čas na tento typ úklidu. <br>Poté se můžete pyšnit krásnou a hlavně čistou
+            podlahou.<br>
+            <a href="https://www.youtube.com/watch?v=2b7VMAg01dw"> klikněte sem pro video </a>
         </p>
         </div>
         <link rel="preconnect" href="https://fonts.googleapis.com">
