--- a/src/sluzby/index.html
+++ b/src/sluzby/index.html
@@ -47,13 +47,13 @@
 
         <div class="timetable">
             <div>
-                <div class="casy"><h3>pondělí: 8:00 - 19:00:</h3><h4>Podlahy, okna, záchody.</h4></div>
-                <div class="casy"><h3>úterý: 8:00 - 19:00:</h3><h4>Koupelna, kuchyně, ložnice/pokoje.</h4></div>
-                <div class="casy"><h3>středa: 8:00 - 19:00:</h3><h4>Utírání prachu, nádobí, zametání.</h4></div>
-                <div class="casy"><h3>čtvrtek: 10:00 - 17:00:</h3><h4>Podlahy, okna, záchody.</h4></div>
-                <div class="casy"><h3>pátek:10:00 - 17:00:</h3><h4>Koupelna, kuchyně, ložnice/pokoje.</h4></div>
-                <div class="casy"><h3>sobota: 10:00 - 17:00:</h3><h4>Utírání prachu, nádobí.</h4></div>
-                <div class="casy"><h3>neděle:</h3><h4>neuklízíme</h4></div>
+                <div class="casy"><h3>pondělí: 8:00 - 19:00:</h3><p>Podlahy, okna, záchody.</p></div>
+                <div class="casy"><h3>úterý: 8:00 - 19:00:</h3><p>Koupelna, kuchyně, ložnice/pokoje.</p></div>
+                <div class="casy"><h3>středa: 8:00 - 19:00:</h3><p>Utírání prachu, nádobí, zametání.</p></div>
+                <div class="casy"><h3>čtvrtek: 10:00 - 17:00:</h3><p>Podlahy, okna, záchody.</p></div>
+                <div class="casy"><h3>pátek:10:00 - 17:00:</h3><p>Koupelna, kuchyně, ložnice/pokoje.</p></div>
+                <div class="casy"><h3>sobota: 10:00 - 17:00:</h3><p>Utírání prachu, nádobí.</p></div>
+                <div class="casy"><h3>neděle:</h3><p>neuklízíme</p></div>
             </div>
 
             <img class="obrazek" src="../../images/cat.jpg">
