--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -87,7 +87,7 @@
                 
 
                 <h2>ZAMĚSTNANCI</h2>
-                <div class="mainContainer" >
+                <div class="mainContainer" id="zamest">
                     <div class="paragraphContainer">
                         <p><b>Aneta</b>- Dobrý den, jmenuji se Aneta, ale klidně mi říkejte Any.
                         Je mi 42 let a jsem velice zkušená uklízečka. Jsem z Brna.
