ikona co skoro nefunguje

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/hlavni.css" type="text/css">
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="css/shared.css" type="text/css">
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/Untitled-Artwork.png">
+    <title>kockyuklizecky</title>
 </head>
 
 
