--- a/src/sluzby/index.html
+++ b/src/sluzby/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>kockyuklizecky</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/shared.css" type="text/css" />
     <link rel="stylesheet" href="sluzby_main.css" type="text/css" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/Untitled-Artwork.png">
  
 </head>
 <body>
