--- a/src/tutorialy/index.html
+++ b/src/tutorialy/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <title>Dokument</title>
+    <title>kockyuklizecky</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/shared.css" type="text/css" />
     <link rel="stylesheet" href="tutorial_main.css" type="text/css" />
-    <link rel="icon" type="image/png" sizes="192x192" href="/images/webIcon-192x192.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/Untitled-Artwork.png">
 
 
 </head>
