--- a/src/sluzby/index.html
+++ b/src/sluzby/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="css/shared.css" type="text/css" />
     <link rel="stylesheet" href="sluzby_main.css" type="text/css" />
-    <link rel="icon" type="image/png" sizes="192x192" href="./images/Untitled-Artwork.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/images/Untitled-Artwork.png">
  
 </head>
 <body>
