--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -46,7 +46,7 @@
         <div>
         
             <div class="mainContainer">
-                <h2>HISTORIE</h2>
+                <h2 id="historie">HISTORIE</h2>
                 <div class="mainContainer">
                         <p id="hist">Jsme společnost, která již funguje velice dlouho. Máme hodně zkušeností a velmi věrné zákazníky.
                         Naše firma byla založena v roce 1986 skupinkou mladých žen, které nemohly vystát nepořádek. 
