--- a/src/onas/index.html
+++ b/src/onas/index.html
@@ -92,7 +92,7 @@
                         </p>
                     </div>
                     <div class="paragraphContainer">
-                        <p><b>Alžběta</b>-Všichni mi ale říkají Bětuška.<br>
+                        <p><b>Alžběta</b>-Všichni mi ale říkají Bětuška.
                             Je mi 32 let. Jsem z Chomutova. 
                             Umím umýt nádobí a někdy dokážu i navařit.
                             Nejlépe mi ale jde zametat. Pokud potřebujete pomoc s něčím, 
